libgc (1:6.8-2) UNRELEASED; urgency=low

  * New maintainer. (Closes: #541015)
  * Roughly extract changes from .diff.gz into quilt patch series in
    debian/patches.
  * Bump Standards-Version to 3.8.2.
  * Add Homepage: field.
  * Add ${misc:Depends} for all binary packages.
  * Use ${binary:Version} in libgc-dev => libgcX versioned dependency.

 -- Chris Lamb <lamby@debian.org>  Wed, 12 Aug 2009 00:26:09 +0100

libgc (1:6.8-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * Apply patch support for GNU/kFreeBSD amd64. (closes: #405669)

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Aug 2008 21:21:44 +0200

libgc (1:6.8-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Enable local malloc on all linux arches. (closes: #431424)

 -- Bastian Blank <waldi@debian.org>  Wed, 18 Jul 2007 20:27:44 +0000

libgc (1:6.8-1) unstable; urgency=low

  * New upstream release (closes: #366864)
  * Apply patch to fix m68k (closes: #383817)

 -- Ryan Murray <rmurray@debian.org>  Fri, 22 Sep 2006 20:08:09 -0700

libgc (1:6.7-2) unstable; urgency=low

  * Disable --enable-redirect-malloc again (closes: #371886)

 -- Ryan Murray <rmurray@debian.org>  Tue, 13 Jun 2006 17:28:27 -0700

libgc (1:6.7-1) unstable; urgency=low

  * New upstream release (closes: #356246)
  * Fix typo in description (closes: #341086)

 -- Ryan Murray <rmurray@debian.org>  Sun, 28 May 2006 20:19:58 -0700

libgc (1:6.6-2) unstable; urgency=low

  * Apply libgc-6.6-arm-swp-fix.diff to fix arm build (closes: #343612)

 -- Ryan Murray <rmurray@debian.org>  Fri, 16 Dec 2005 10:53:15 -0800

libgc (1:6.6-1) unstable; urgency=low

  * New upstream release (closes: #335816, #342586)
  * Run make check from debian/rules
  * Disable threads for hurd-i386 (closes: #319912)

 -- Ryan Murray <rmurray@debian.org>  Thu, 15 Dec 2005 00:53:36 -0800

libgc (1:6.5-1) unstable; urgency=low

  * New upstream release
  * Rename libgc1 to libgc1c2 for C++ transition.