@@ -1,6 +1,4 @@
 #!/usr/bin/make -f
-# Made with the aid of dh_make, by Craig Small
-# Sample debian/rules that uses debhelper. GNU copyright 1997 by Joey Hess.
 
 include /usr/share/quilt/quilt.make
 
@@ -14,27 +12,21 @@ endif
 
 export DH_COMPAT=4
 
-# Uncomment this to turn on verbose mode. 
-#export DH_VERBOSE=1
-
-build: build-stamp $(QUILT_STAMPFN)
-build-stamp:
+build: build-stamp 
+build-stamp: $(QUILT_STAMPFN)
 	dh_testdir
-	
-	# First build the shared library
 	./configure $(CONFIG_OPTS) --enable-cplusplus --disable-dependency-tracking \
 		--with-tags=CXX --prefix=/usr --mandir=\$${prefix}/share/man\
 		--sysconfdir=/etc --localstatedir=/var/lib\
 		--datadir=\$${prefix}/share/doc
 	$(MAKE)
-	touch build-stamp
+	touch $@
 
 clean: unpatch
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp install-stamp
 
-	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
 
 	dh_clean
@@ -46,11 +38,9 @@ install-stamp: build-stamp
 	dh_clean -k
 
 	$(MAKE) check
-	# Add here commands to install the package into debian/tmp.
 	$(MAKE) install DESTDIR=`pwd`/debian/tmp
-	touch install-stamp
+	touch $@
 
-# Build architecture-independent files here.
 binary-indep: build install
 
 binary-arch: build install
@@ -69,9 +59,6 @@ binary-arch: build install
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
-
-source diff:                                                                  
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
